# vnx-search

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codegen.sh
config/: CrawlFrontend.json  CrawlProcessor.json  SearchEngine.json
config/alternate/: CrawlFrontend.json  CrawlProcessor.json  PageContent.json  QueryEngine.json  SearchEngine.json  SearchFrontend.json  UrlIndex.json  WordArray.json  WordContext.json
config/alternate/CrawlProcessor/: domain_blacklist  path_blacklist  regex_blacklist  root_urls
config/archive/: HttpArchive.json  vnx_server_map
config/backend/: vnx_server_map
config/default/: ArchiveProxy.json  ArchiveServer.json  HttpArchive.json  PageContent.json  PageIndex.json  PageInfo.json  UrlIndex.json  WordArray.json  WordContext.json
config/default/CrawlProcessor/: regex_blacklist
config/engine/: vnx_server_map
config/frontend/: vnx_server_map
config/httpd/: FileServer.json  HttpServer.json
config/local/: HttpArchive.json  PageIndex.json  PageInfo.json  UrlIndex.json  WordArray.json  parent
config/test/: CrawlFrontend.json  CrawlProcessor.json  HttpServer.json  Router.json  SearchEngine.json  WordContext.json  parent
config/test/CrawlProcessor/: domain_blacklist
include/vnx/search/: ArchiveProxy.h  ArchiveServer.h  CrawlFrontend.h  CrawlProcessor.h  HtmlParser.h  PageProcessor.h  PdfParser.h  PlainTextParser.h  QueryEngine.h  SearchEngine.h  SearchFrontend.h  Util.h
interface/: CrawlStats.vni  DomainIndex.vni  FetchResult.vni  HttpResponse.vni  LoadResult.vni  PageContent.vni  PageIndex.vni  PageInfo.vni  QueryInterface.vni  Response.vni  ResultItem.vni  SearchInterface.vni  SearchResult.vni  TextResponse.vni  UrlIndex.vni  UrlInfo.vni  WordArray.vni  WordContext.vni  crawl_domain_stats_t.vni  image_link_t.vni  page_entry_t.vni  page_link_t.vni  query_options_t.vni  result_item_t.vni  reverse_link_t.vni  score_type_e.vni  search_flags_e.vni  word_entry_t.vni
lib/: make_all.sh
modules/: ArchiveProxy.vni  ArchiveServer.vni  ContentParser.vni  CrawlFrontend.vni  CrawlProcessor.vni  PageProcessor.vni  QueryEngine.vni  SearchEngine.vni  SearchFrontend.vni
node/: index.js  package-lock.json  package.json
node/views/: index.ejs  page_info.ejs  page_ranking.ejs  result.ejs  results.ejs  word_context.ejs
scripts/: busy_loop.sh  conspiracy.txt  env.sh  exec.sh  fake_news.txt  gdb_print_threads.txt  mediabias.sh  run_engine_tunnel.sh  run_frontend_tunnel.sh  setcap_eip.sh  start_archive.sh  start_crawler.sh  start_engine_node.sh  start_frontend_tunnel.sh
src/: ArchiveProxy.cpp  ArchiveServer.cpp  CrawlFrontend.cpp  CrawlProcessor.cpp  HtmlParser.cpp  PageProcessor.cpp  PdfParser.cpp  PlainTextParser.cpp  QueryEngine.cpp  SearchEngine.cpp  SearchFrontend.cpp  Util.cpp  WordContext.cpp  image_link_t.cpp  page_link_t.cpp  reverse_link_t.cpp  vnx_search_archive.cpp  vnx_search_backend.cpp  vnx_search_browse.cpp  vnx_search_crawl.cpp  vnx_search_discover.cpp  vnx_search_engine.cpp  vnx_search_frontend.cpp  vnx_search_html_parser.cpp  vnx_search_httpd.cpp  vnx_search_query.cpp  vnx_search_query_engine.cpp
test/: test_text_parse.cpp  test_url.cpp
www/: index.html
